# game_of_life

./: .game_of_life.cpp.swp  .gitignore  CMakeLists.txt  Makefile  README.md  game_of_life.cpp  game_of_life.h  game_of_life_serial.cpp  main.cpp  utilities.cpp  utilities.h
GOL/: Makefile  config.txt  game_of_life  game_of_life.cpp  game_of_life.h  generate_table.cpp  main.cpp  many_cuda.cu  many_cuda.cuh  output.nvprof  read_table.cpp  report_main.cpp  serial.cpp  serial.h  shared_cuda.cu  shared_cuda.cuh  simple_cuda.cu  simple_cuda.cuh  test  tmp.txt  utilities.cpp  utilities.cu  utilities.cuh  utilities.h
config_files/: config.txt
include/: cuda_kernels.cuh  game_of_life.cuh  game_of_life.h  serial.h  simple_cuda_gol.cuh  test.h  utilities.h
src/: cuda_kernels.cu  cuda_main.cpp  game_of_life.cpp  game_of_life.cu  main.cpp  serial.cpp  simple_cuda_gol.cu  test.cpp  utilities.cpp
